pamodās - viss darbojas